--- a/src/components/accordion/accordion.html
+++ b/src/components/accordion/accordion.html
@@ -1,22 +1,23 @@
-asd: {{data === undefined}} 123 {{data}}
+<!-- asd: {{data === undefined}} 123 {{data}} -->
 
+<!-- <pre>
+    {{data}}
+</pre> -->
 
-
-<template v-if="catApiData != undefined">
+<!-- <template v-if="data != undefined">
     data != undefined
     
 asd: {{data === undefined}} 123
 
 
 </template>
-<template v-if="catApiData == undefined">
+<template v-if="data == undefined">
     undefined
     {{data}}
-</template>
+</template> -->
 
 <ul id="example-1">
     <li v-for="cat in data.data" v-bind:key="cat.id">
-        "'{{cat.url}}'"
         <li>
             <img v-bind:src="cat.url" width="200" />
         </li>
