--- a/src/components/accordion/accordion.scss
+++ b/src/components/accordion/accordion.scss
@@ -1,7 +1,3 @@
-h3 {
-    margin: 40px 0 0;
-}
-
 ul {
     list-style-type: none;
     padding: 0;
@@ -12,6 +8,6 @@ li {
     margin: 0 10px;
 }
 
-a {
-    color: #42b983;
+img {
+    height: 400px;
 }
