--- a/src/components/explorer/explorer.html
+++ b/src/components/explorer/explorer.html
@@ -1,8 +1,8 @@
 <!-- asd: {{data === undefined}} 123 {{data}} -->
 
-<!-- <pre>
+<pre>
     {{data}}
-</pre> -->
+</pre>
 
 <!-- <template v-if="data != undefined">
     data != undefined
@@ -19,7 +19,7 @@ asd: {{data === undefined}} 123
 <ul id="example-1">
     <li v-for="cat in data.data" v-bind:key="cat.id">
         <li>
-            <img v-bind:src="cat.url" width="200" />
+            <img v-bind:src="cat.url" width="200" alt="test123" />
         </li>
     </li>
 </ul>
